<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.optionmenu.MainActivity">


    <item
        android:id="@+id/gps"
        android:orderInCategory="100"
        android:title="@string/gps"
        app:showAsAction="never" />

    <item
        android:id="@+id/privacy_policy"
        android:orderInCategory="100"
        android:title="@string/privacy_policy"
        app:showAsAction="never" />

    <item
        android:id="@+id/about_us"
        android:orderInCategory="100"
        android:title="@string/about_us"
        app:showAsAction="never" />

    <item
        android:id="@+id/help"
        android:orderInCategory="100"
        android:title="@string/help"
        app:showAsAction="never" />

    <item
        android:id="@+id/logout"
        android:orderInCategory="100"
        android:title="@string/logout"
        app:showAsAction="never" />

</menu>