<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#87cefa"
    android:orientation="vertical"
    tools:context=".update_profile">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="96dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_margin="40dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="60dp"
        android:src="@drawable/girl"
        app:civ_border_color="@android:color/black"
        app:civ_border_width="2dp" />

    <TextView
        android:id="@+id/tvUserInformation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="60dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/user_information"
        android:textColor="#DACD4D24"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="60dp"
        android:autofillHints="Name"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/Name"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/Address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="60dp"
        android:autofillHints="Address"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/Address"
        android:inputType="textPostalAddress"
        android:padding="10dp"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/Contact1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="60dp"
        android:autofillHints="Contact1"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/Emergency_contact_1"
        android:inputType="phone"
        android:padding="10dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/Contact2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="60dp"
        android:autofillHints="Contact2"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/Emergency_contact_2"
        android:inputType="phone"
        android:padding="10dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/Contact3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="60dp"
        android:autofillHints="Contact3"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/Emergency_contact_3"
        android:inputType="phone"
        android:padding="10dp"
        android:textStyle="bold" />


</LinearLayout>