<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#87cefa"
    tools:context=".FirstFragment">

    <TextView
        android:id="@+id/tvtext"
        android:layout_width="334dp"
        android:layout_height="17dp"
        android:layout_alignParentStart="true"

        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"

        android:layout_marginStart="36dp"

        android:layout_marginTop="58dp"
        android:layout_marginEnd="41dp"

        android:gravity="center"
        android:text="@string/in_case_of_an_emergency_press_besecure_button"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnhelp"
        android:layout_width="160dp"
        android:layout_height="155dp"
        android:layout_below="@+id/tvtext"
        android:layout_alignParentStart="true"

        android:layout_alignParentEnd="true"

        android:layout_alignParentBottom="true"
        android:layout_marginStart="127dp"

        android:layout_marginTop="37dp"
        android:layout_marginEnd="124dp"

        android:layout_marginBottom="462dp"
        android:background="#E6382C"
        android:text="@string/besecure" />

    <TextView
        android:id="@+id/tvtext5"
        android:layout_width="248dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"

        android:layout_alignParentEnd="true"

        android:layout_alignParentBottom="true"
        android:layout_marginStart="82dp"

        android:layout_marginEnd="81dp"

        android:layout_marginBottom="414dp"
        android:gravity="center"
        android:text="@string/emergency_numers_of_gujarat"
        android:textColor="#070707" />

    <TextView
        android:id="@+id/tvtext6"
        android:layout_width="296dp"
        android:layout_height="320dp"
        android:layout_alignParentStart="true"

        android:layout_alignParentEnd="true"

        android:layout_alignParentBottom="true"
        android:layout_marginStart="55dp"

        android:layout_marginEnd="60dp"

        android:layout_marginBottom="59dp"
        android:background="#E4DA7C"
        android:shadowColor="#00BCD4"
        android:text="@string/police" />

</RelativeLayout>